beatdrift-cli-master_copy/beatdrift-cli-master/beatdrift-cli/listdata2/Test/ec2_DescribeNetworkInterfaces_us-east-1_None.json
{"service": "ec2", "region": "us-east-1", "profile": null, "operation": "DescribeNetworkInterfaces", "response": {"NetworkInterfaces": [{"Association": {"IpOwnerId": "amazon", "PublicDnsName": "ec2-100-26-109-145.compute-1.amazonaws.com", "PublicIp": "100.26.109.145"}, "Attachment": {"AttachTime": "2022-05-16T18:05:46+00:00", "AttachmentId": "eni-attach-092bacfc6bfdeadb5", "DeleteOnTermination": true, "DeviceIndex": 0, "NetworkCardIndex": 0, "InstanceId": "i-0858f25e706de0459", "InstanceOwnerId" [...]
