beatdrift-cli-master_copy/beatdrift-cli-master/beatdrift-cli/listdata2/Test/ec2_DescribeSecurityGroupRules_us-east-1_None.json
{"service": "ec2", "region": "us-east-1", "profile": null, "operation": "DescribeSecurityGroupRules", "response": {"SecurityGroupRules": [{"SecurityGroupRuleId": "sgr-06a085965c39699ae", "GroupId": "sg-0782cfd7b1c060fa8", "GroupOwnerId": "637333041330", "IsEgress": false, "IpProtocol": "tcp", "FromPort": 443, "ToPort": 443, "CidrIpv4": "0.0.0.0/0", "Tags": []}, {"SecurityGroupRuleId": "sgr-0a1fe896f64c56aaa", "GroupId": "sg-0782cfd7b1c060fa8", "GroupOwnerId": "637333041330", "IsEgress": false, " [...]
